--- a/repositoryUserInterface/app/views/Application/index.html
+++ b/repositoryUserInterface/app/views/Application/index.html
@@ -204,14 +204,14 @@
 		<div id="header-container">
 			<header class="wrapper clearfix">
 				<h2 id="title">
-				<div style="margin-top:-15%;"><img src="@{'/public/images/logo.png'}" width="120px" height="100px" />&nbsp
-				<img src="@{'/public/images/uclaa.png'}" width="160px" height="70px" /></div><br />
+				<!--<div style="margin-top:-15%;"><img src="@{'/public/images/logo.png'}" width="120px" height="100px" />&nbsp
+				<img src="@{'/public/images/uclaa.png'}" width="160px" height="70px" /></div><br />-->
 				SensorAct
 				<br />
 				<br />
 				<span style="font-size:25px;">Sense - Interact - Actuate</span><br />
 				</h2>
-				<nav><br />
+				<nav>
 					<p class="pbox">
 						<label for="sign_in_username">Username</label>
 						<input type="text" size="10" name="sign_in_username" id="sign_in_username" />
@@ -303,7 +303,9 @@
 
 				<div style="clear:both;" id="footer-container">
 				<footer class="wrapper">
-				<h4 align="center">Special Thanks to DeIT and NSF for funding</h4>
+					<h4 align="center"><img src="@{'/public/images/logo.png'}" width="100px" height="70px" />&nbsp
+				<img src="@{'/public/images/uclaa.png'}" width="160px" height="40px" />
+				<font size="+1">Special Thanks to DeIT and NSF for funding</font></h4>
 				</footer>
 				</div>
 
