--- a/repositoryUserInterface/public/stylesheets/style.css
+++ b/repositoryUserInterface/public/stylesheets/style.css
@@ -312,7 +312,7 @@ text-decoration:underline;
 
 }
 
-#accordion button:not(.Tags){
+#accordion button:not(.Tags),#accordion1 button:not(.Tags){
 margin-left:7px;
 float:right;
 clear:both;
@@ -320,18 +320,12 @@ width:110px;
 margin-bottom:7px;
 }width:50%;
 
-#accordion1 button:not(.Tags){
-margin-left:7px;
-float:right;
-clear:both;
-width:110px;
-margin-bottom:7px;
-}width:50%;
+
 
 .divTags{
 text-align:left;	
 }
-#accordion1,#accordion .Tags{
+#accordion .Tags,#accordion1 .Tags{
 margin-left:7px;
 
 }
@@ -499,6 +493,7 @@ background-color:rgb(238, 238, 238);*/
 
 #visualBox{
 text-align:left;
+float:left;
 	
 }
 #visualBox label{
@@ -524,25 +519,53 @@ clear:both;
 border: 3px solid #f00;
 }
 
-#input_message
-{background:  #F8F8F8;
-	color: #707070;
-	padding:8px;
-	-moz-border-radius: 15px;
-    -webkit-border-radius: 15px;
-    border-radius: 15px;
-    border: 2px solid;
-    min-height:50px;
+#visualFunctions label{
+width:100%;
 }
 
-#output_message
-{
-	background: #F8F8F8;
-	color: #707070;
-	padding:8px;
-	-moz-border-radius: 15px;
-    -webkit-border-radius: 15px;
-    border-radius: 15px;
-    border: 2px solid;
-    min-height:50px;
+.play{
+background:white;
+border-color:transparent transparent transparent #000000;
+border-style:solid;
+border-width:10px 2px 10px 16px;
+
+height:0;
+text-indent:-9999px;
+width:0;
+}
+.play:hover{
+background:white;
+border-color:transparent transparent transparent rgb(157,156,157);
+border-style:solid;
+border-width:10px 2px 10px 16px;
+height:0;
+text-indent:-9999px;
+width:0;
+}
+
+.pause{
+background:white;
+border-color:transparent #000000;
+border-style:solid;
+border-width:0 4px 0;
+height:15px;
+text-indent:-9999px;
+width:7px;
+
+}
+
+.pause:hover{
+background:white;
+border-color:transparent rgb(157,156,157);
+border-style:solid;
+border-width:0 4px 0;
+
+height:15px;
+text-indent:-9999px;
+width:7px;
+}
+
+.sensor{
+	margin-top:7px;
+	margin-left:15px;
 }
