--- a/repositoryUserInterface/app/views/Application/display.html
+++ b/repositoryUserInterface/app/views/Application/display.html
@@ -334,6 +334,8 @@
 					query[QUERY_CONDITIONS][QUERY_CONDITIONS_TO_TIME] = endTime;
 					query[QUERY_USER_NAME] = username;
 					query[QUERY_IS_INTERACTIVE] = interactive;
+					var mode=interactive=="true"?"interactive":"non interactive"+" mode";
+					var r=  showNoty("Chart Loading in "+mode , "center", "off");
 					query[QUERY_DEVICE_ARRAY] = new Array();
 					var i = 0;
 					for (device in allSelectedItems) {
